<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/string_class_day"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/spinner_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/array_days"
        app:layout_constraintStart_toStartOf="@+id/spinner_number"
        app:layout_constraintTop_toTopOf="@id/tv_day" />

    <TextView
        android:id="@+id/tv_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/string_class_number"
        app:layout_constraintStart_toStartOf="@+id/tv_day"
        app:layout_constraintTop_toBottomOf="@+id/tv_day" />

    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/spinner_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        app:layout_constraintStart_toEndOf="@+id/tv_number"
        app:layout_constraintTop_toTopOf="@+id/tv_number" />

    <RadioGroup
        android:id="@+id/rg_move_class"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@id/tv_number"
        app:layout_constraintTop_toBottomOf="@id/tv_number">

        <RadioButton
            android:id="@+id/rb_replace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/string_replace" />

        <RadioButton
            android:id="@+id/rb_swap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/string_swap" />
    </RadioGroup>

    <Button
        android:id="@+id/dlg_button_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/button_dialog_margin"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="?attr/colorAccent"
        android:text="@string/string_button_ok"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rg_move_class" />

    <Button
        android:id="@+id/dlg_button_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="@dimen/button_dialog_margin"
        android:layout_marginBottom="16dp"
        android:backgroundTint="?attr/colorAccent"
        android:text="@string/string_button_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rg_move_class" />
</android.support.constraint.ConstraintLayout>