<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_completion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/string_class_completion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/spinner_completion"
        style="@style/spinner_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@id/tv_completion"
        app:layout_constraintStart_toEndOf="@+id/tv_completion"
        app:layout_constraintTop_toTopOf="@id/tv_completion" />

    <EditText
        android:id="@+id/et_homework"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/string_hint_enter_homework"
        android:inputType="textCapSentences"
        app:layout_constraintStart_toStartOf="@id/tv_completion"
        app:layout_constraintTop_toBottomOf="@id/tv_completion" />

    <Button
        android:id="@+id/dlg_button_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/button_dialog_margin"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="?attr/colorAccent"
        android:text="@string/string_button_ok"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_homework" />

    <Button
        android:id="@+id/dlg_button_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="@dimen/button_dialog_margin"
        android:layout_marginBottom="16dp"
        android:backgroundTint="?attr/colorAccent"
        android:text="@string/string_button_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_homework" />

</android.support.constraint.ConstraintLayout>